Bug 480065.  Make chrome registry not mess with inline stylesheets.  r=bsmedberg, sr=dbaron